# IndieRenderer

./: .gitignore  CMakeLists.txt  IndieEngine.sln  README.md  profile_capture.csv
Doxygen/: Doxyfile
Doxygen/html/: _engine_app_8cpp.html  _engine_app_8cpp__incl.dot  _engine_app_8cpp__incl.md5  _engine_app_8hpp.html  _engine_app_8hpp__dep__incl.dot  _engine_app_8hpp__dep__incl.md5  _engine_app_8hpp__incl.dot  _engine_app_8hpp__incl.md5  _engine_app_8hpp_source.html  _engine_camera_8cpp.html  _engine_camera_8cpp__incl.dot  _engine_camera_8cpp__incl.md5  _engine_camera_8hpp.html  _engine_camera_8hpp__dep__incl.dot  _engine_camera_8hpp__dep__incl.md5  _engine_camera_8hpp__incl.dot  _engine_camera_8hpp__incl.md5  _engine_camera_8hpp_source.html  _engine_g_u_i_8cpp.html  _engine_g_u_i_8cpp__incl.dot  _engine_g_u_i_8cpp__incl.md5  _engine_g_u_i_8hpp.html  _engine_g_u_i_8hpp__dep__incl.dot  _engine_g_u_i_8hpp__dep__incl.md5  _engine_g_u_i_8hpp_source.html  _engine_logger_8cpp.html  _engine_logger_8cpp__incl.dot  _engine_logger_8cpp__incl.md5  _engine_logger_8hpp.html  _engine_logger_8hpp__dep__incl.dot  _engine_logger_8hpp__dep__incl.md5  _engine_logger_8hpp__incl.dot  _engine_logger_8hpp__incl.md5  _engine_logger_8hpp_source.html  _engine_profiler_8cpp.html  _engine_profiler_8cpp__incl.dot  _engine_profiler_8cpp__incl.md5  _engine_profiler_8hpp.html  _engine_profiler_8hpp__dep__incl.dot  _engine_profiler_8hpp__dep__incl.md5  (+279 more)
Doxygen/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  (+40 more)
IndieEngine/: EngineApp.cpp  EngineApp.hpp  EngineCamera.cpp  EngineCamera.hpp  EngineGUI.cpp  EngineGUI.hpp  EngineLogger.cpp  EngineLogger.hpp  EnginePBRMaterial.cpp  EnginePBRMaterial.hpp  EngineProfiler.hpp  EngineProperty.hpp  EngineTimer.cpp  EngineTimer.hpp  GLApp.cpp  GLApp.hpp  GLCustomModel.hpp  GLDebugger.hpp  GLMesh.cpp  GLMesh.hpp  GLModel.cpp  GLModel.hpp  GLResources.cpp  GLResources.hpp  GLShader.cpp  GLShader.hpp  IndieEngine.cpp  IndieEngine.vcxproj  IndieEngine.vcxproj.filters  main.cpp
IndieEngine/include/: EngineApp.hpp  EngineCamera.hpp  EngineLogger.hpp  GLApp.hpp  GLDebugger.hpp  GLModel.hpp  GLResources.hpp  GLShader.hpp
IndieEngine/logs/: performance.txt  setuplog.txt
IndieEngine/src/: EngineApp.cpp  EngineCamera.cpp  EngineGUI.cpp  EngineLogger.cpp  EnginePBRMaterial.cpp  EngineProfiler.cpp  EngineTimer.cpp  GLApp.cpp  GLCustomModel.cpp  GLMesh.cpp  GLModel.cpp  GLResources.cpp  GLShader.cpp  main.cpp
dependencies/: assimp-vc140-mt_d.lib  zlib.lib  zlibd.lib
dependencies/assimp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  assimp.pc  cmake_install.cmake  revision.h
dependencies/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
dependencies/imgui/: imgui_impl_glfw_gl3.cpp
resources/shader/: brdf.frag  brdf.vert  cubeMap.frag  cubeMap.vert  deferredShader.frag  fragment_shader.glsl  gBuffer.frag  irradianceMap.frag  pbrShader.frag  pbrShader.vert  post_processing.frag  post_processing.vert  prefilterMap.frag  simple_shader.frag  simple_shader.vert  vertex_shader.glsl
(+20 files in other folders)
